<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ddutra9.popularmoviesapp.MovieDetailFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:background="@color/cardview_shadow_start_color">

            <TextView
                android:id="@+id/title_movie_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_font"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/vertical_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:layout_marginTop="@dimen/vertical_padding"
                android:layout_marginBottom="@dimen/vertical_padding"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/fab_margin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/title_font"
                        android:text="@string/pref_release_year"/>

                    <ImageButton
                        android:id="@+id/mark_favorite_ib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/mark_favorite"
                        android:background="@null"/>

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:orientation="vertical">

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?editTextBackground">

                        <TextView
                            android:paddingTop="@dimen/vertical_padding"
                            android:paddingBottom="@dimen/vertical_padding"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/title_font"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/synopsis"/>

                        <TextView
                            android:id="@+id/vote_average"
                            android:paddingTop="@dimen/vertical_padding"
                            android:paddingBottom="@dimen/vertical_padding"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/pref_vote_average"/>

                    </android.support.v7.widget.LinearLayoutCompat>


                    <TextView
                        android:id="@+id/text_desc_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_padding"
                        android:text="@string/pref_desc_movie"/>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:padding="@dimen/fab_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?editTextBackground">

                        <TextView
                            android:paddingTop="@dimen/vertical_padding"
                            android:paddingBottom="@dimen/vertical_padding"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/title_font"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/trailers"/>

                    </android.support.v7.widget.LinearLayoutCompat>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/youtube_trailers_rv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </android.support.v7.widget.RecyclerView>

                    </android.support.v7.widget.LinearLayoutCompat>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="@dimen/fab_margin"
                android:padding="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/fab_margin"
                    android:orientation="vertical">

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="?editTextBackground">

                        <TextView
                            android:paddingTop="@dimen/vertical_padding"
                            android:paddingBottom="@dimen/vertical_padding"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/title_font"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/reviews"/>

                    </android.support.v7.widget.LinearLayoutCompat>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviews_rv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>
